# ControlLight

./: .gitattributes  .gitignore  README.md  gallery-data.js  index.html  info.py  predict.py  pyproject.toml  requirements.txt  script.js  serve_demo.py  styles.css
ControlLight/: bootstrap.py  export_bundle.py  predict.py  realir_bench_gif.py  web_demo.py
config/: train_flux2klein_lora.yaml
diffusers/src/diffusers/: __init__.py
diffusers/src/diffusers/pipelines/: __init__.py
docs/: INSTALL.md
extensions/alpha_lora_edge_lock/: AlphaLoraEdgeLockTrainer.py  __init__.py
extensions/alpha_lora_struct_consistency/: AlphaLoraStructConsistencyTrainer.py  __init__.py  pair_dataloader.py
extensions/alpha_lora_trainer/: AlphaLoraTrainer.py  __init__.py
extensions_built_in/diffusion_models/: __init__.py
extensions_built_in/diffusion_models/flux2/: flux2_klein_model.py  flux2_model.py
extensions_built_in/diffusion_models/flux2/src/: pipeline.py
extensions_built_in/diffusion_models/ltx2/: ltx2.py
jobs/: ExtensionJob.py
jobs/process/: BaseSDTrainProcess.py  __init__.py
landing/: README.md  assets  gallery-data.js  index.html  script.js  styles.css
prompts/: realir_bench_lowlight_prompts.json
scripts/: demo.sh  predict.sh  project_env.sh
scripts/train/: README.md  prepare_dataset_links.sh  train_local.sh  train_multigpu.sh  train_watchdog.sh  watchdog_resume.py
toolkit/: config_modules.py  data_loader.py  dataloader_mixins.py  extension.py
toolkit/util/: get_model.py
web_demo/: app.js  index.html  styles.css
(+4 files in other folders)
