[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "controllight"
version = "0.2.0"
description = "Open-source-friendly training and prediction utilities for the ControlLight FLUX.2-Klein LoRA project."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "setuptools>=68,<81",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
  "transformers==5.5.3",
  "accelerate==1.13.0",
  "peft==0.19.1",
  "safetensors==0.7.0",
  "Pillow==11.3.0",
  "numpy==1.26.4",
  "einops==0.8.2",
  "huggingface_hub==1.11.0",
  "sentencepiece==0.2.1",
  "pyyaml==6.0.3",
  "python-dotenv==1.2.1",
  "bitsandbytes==0.49.2",
  "tensorboard==2.20.0",
  "kornia==0.8.2",
  "torchao==0.10.0",
  "k-diffusion==0.1.1.post1",
  "lycoris-lora==1.8.3",
  "timm==1.0.22",
  "open-clip-torch==3.3.0",
  "albumentations==1.4.15",
  "albucore==0.0.16",
  "av==17.0.1",
  "invisible-watermark",
  "omegaconf==2.3.0",
  "pydantic==2.13.3",
  "toml==0.10.2",
  "oyaml==1.0",
  "opencv-python==4.11.0.86",
  "optimum-quanto==0.2.4",
  "scipy==1.12.0",
  "matplotlib==3.10.1",
]

[project.scripts]
controllight-predict = "ControlLight.predict:main"
controllight-demo = "ControlLight.web_demo:main"
controllight-export = "ControlLight.export_bundle:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ControlLight*"]
